# vala-clicker

./: .gitignore  Makefile  README.md  build-flatpak.sh  com.github.yamada.vala-clicker.yml  meson.build
data/: com.github.yamada.vala-clicker.desktop  com.github.yamada.vala-clicker.metainfo.xml
src/: main.vala  meson.build  progression.vala  upgrade.vala  utils.vala  window.vala
